# rust_project

airbnb/src/: main.rs
cinema_scrapper/: Cargo.toml
cinema_scrapper/src/: lib.rs  main.rs
comments/src/: main.rs
control_flow/src/: main.rs
functions/src/: main.rs
game_of_life/: Cargo.toml
game_of_life/src/: lib.rs  main.rs
grains_de_sable/: Cargo.toml
grains_de_sable/src/: main.rs
guessing_game/firedbg/: target.json
guessing_game/src/: main.rs
hello_cargo/firedbg/: target.json
hello_world/: main
loops/src/: main.rs
luna_paint/: Cargo.toml
luna_paint/src/: .main.rs.pending-snap  main.rs
minigrep/src/: lib.rs  main.rs
rectangles/src/: main.rs
