[package]
name = "grains_de_sable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.25"
rand = "0.8.5"
window_rs = {git = "https://github.com/NoodleSamaChan/window_rs"}

[dev-dependencies]
insta = "1.36.1"
proptest = "1.4.0"
